<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2B3A67"
    android:paddingTop="0dp"
    tools:context=".CardsActivity">

    <ImageButton
        android:id="@+id/triDot"
        android:layout_width="50dp"
        android:layout_height="70dp"
        android:backgroundTint="#00FFFFFF"
        android:onClick="tripleDotMenu"
        android:scaleType="centerCrop"
        android:src="@drawable/tripledot"
        app:layout_constraintBottom_toTopOf="@id/card"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.99"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/userPic"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:background="#00FFFFFF"
        android:onClick="changeNamePic"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/card"
        app:layout_constraintEnd_toEndOf="@id/card"
        app:layout_constraintStart_toStartOf="@id/card"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/paraply" />

    <TextView
        android:id="@+id/userName"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="#00FFFFFF"
        android:fontFamily="@font/roboto_medium"
        android:gravity="center"
        android:onClick="changeNamePic"
        android:text="@string/ring_of_fylla"
        android:textColor="#ffffff"
        android:textSize="24sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@id/card"
        app:layout_constraintEnd_toEndOf="@id/card"
        app:layout_constraintStart_toStartOf="@id/card"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/card"
        android:layout_width="360dp"
        android:layout_height="450dp"
        android:layout_marginBottom="50dp"
        android:backgroundTint="#00FFFFFF"
        android:onClick="newCard"
        android:scaleType="centerInside"
        android:src="@drawable/card_back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.6" />

    <TextView
        android:id="@+id/cardRule"
        android:layout_width="250dp"
        android:layout_height="200dp"
        android:background="#FFFFFF"
        android:fontFamily="@font/roboto_medium"
        android:gravity="center"
        android:text="@string/rule"
        android:textSize="14sp"
        android:textStyle="bold"
        android:typeface="sans"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@id/card"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/card"
        app:layout_constraintVertical_bias="0.5" />

    <Button
        android:id="@+id/seeRuleButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/roboto_medium"
        android:onClick="showRule"
        android:textColor="#ffffff"
        android:background="#B56B45"
        android:text="@string/show_rule"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/makeRuleButton"
        app:layout_constraintStart_toStartOf="@id/card"
        app:layout_constraintTop_toBottomOf="@id/card" />

    <Button
        android:id="@+id/makeRuleButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="makeRule"
        android:fontFamily="@font/roboto_medium"
        android:background="#B56B45"
        android:textColor="#ffffff"
        android:text="@string/make_rule"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/card"
        app:layout_constraintStart_toEndOf="@id/seeRuleButton"
        app:layout_constraintTop_toBottomOf="@id/card" />

    <LinearLayout
        android:id="@+id/triDotMenu"
        android:layout_width="250dp"
        android:layout_height="200dp"
        android:background="@drawable/triple_dot_border"
        android:orientation="vertical"
        android:translationZ="10dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/triDot"
        app:layout_constraintHorizontal_bias="1.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/triDot"
        app:layout_constraintVertical_bias="0.07">

        <TextView
            android:id="@+id/showCurrentRules"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/triple_dot_item_border_top"
            android:fontFamily="@font/roboto_medium"
            android:gravity="center"
            android:onClick="showCurrentRules"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:text="@string/show_current_rules"
            android:textColor="#ffffff"
            android:textSize="14sp"
            android:textStyle="bold"
            android:typeface="sans"
            android:visibility="visible" />

        <TextView
            android:id="@+id/newGame"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/triple_dot_item_border"
            android:fontFamily="@font/roboto_medium"
            android:gravity="center"
            android:onClick="newGame"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:text="@string/new_game"
            android:textColor="#ffffff"
            android:textSize="14sp"
            android:textStyle="bold"
            android:typeface="sans"
            android:visibility="visible" />

        <TextView
            android:id="@+id/addPlayer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/triple_dot_item_border"
            android:fontFamily="@font/roboto_medium"
            android:gravity="center"
            android:onClick="addPlayer"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:text="@string/add_player"
            android:textColor="#ffffff"
            android:textSize="14sp"
            android:textStyle="bold"
            android:typeface="sans"
            android:visibility="visible" />

        <TextView
            android:id="@+id/backFromCurrentRules"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/triple_dot_item_border_top"
            android:gravity="center"
            android:textColor="#ffffff"
            android:onClick="hideCurrentRules"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:text="@string/gå_tilbake"
            android:textSize="14sp"
            android:fontFamily="@font/roboto_medium"
            android:textStyle="bold"
            android:visibility="gone" />

        <ListView
            android:id="@+id/currentRuleList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:divider="#343330"
            android:dividerHeight="2dp"
            android:visibility="gone"/>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>